Version 1.10.2 - 2.2.3
------------------------------------------------------
Additions
- Added informational hover button in alternate inventory to display information about a backpack (useful for equipped backpacks, where you can't easily check it out).
- Added ability to press 'enter' to rename a backpack instead of mandating clicking the button.

Changes
- Rebalanced a couple recipes (and made all of them more integrated with the OreDictionary).

Bug Fixes
- Fix backpack rendering poorly in player's inventory screen.
------------------------------------------------------
Version 1.10.2 - 2.2.2
------------------------------------------------------
Additions
- None

Changes
- Improved rendering location of backpack when chest armor/elytra equipped.

Bug Fixes
- Re-enable rendering; fixed bug that caused hangups on client.
------------------------------------------------------
Version 1.10.2 - 2.2.1
------------------------------------------------------
Additions
- Added back EnderStorage support (can right click an ender pouch to open it directly from a backpack's inventory).
- Added a new command '/ib deleteEquippedBackpack [player]' which does exactly what it says, could be useful for admins if there are errors.

Changes
- None

Bug Fixes
- Fix background transparency for basic and gold backpacks.
- Temporarily disable rendering when have something in chest slot, as it causes hangups.
------------------------------------------------------
Version 1.10.2 - 2.2.0
------------------------------------------------------
Additions
- None

Changes
- Changed 'Crafting' upgrade's name back to to 'Compressing' as it fits the action more
- (Internal) Large change to how backpacks are rendered. Backpacks are no longer an entity, but rather are now rendered as a layer on the player model.

Bug Fixes
- Fix localization error for crafting upgrade.
- Fix crash/inconsistent data saving when changing dimensions with an equipped backpack on a dedicated server.